# jscpp

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml  testing.yml
releaseNotes/: 2025-8-22.md
runtime/: errorhandler.cpp  errorhandler.hpp  main.cpp  parser.cpp  parser.hpp
runtime/syntax/: include.cpp  print.cpp  print.hpp  syntaxhandler.hpp  variable.cpp  variable.hpp
src/: main.jscpp  variable.jscpp
